src/app/globals.css
html {
    scroll-behavior: smooth;
}
@import "tailwindcss";

@theme inline {
    --color-background: var(--background);
    --color-foreground: var(--foreground);
    --font-sans: var(--font-geist-sans);
    --font-mono: var(--font-geist-mono);
    --color-primary: #050816;
    --color-secondary: #2a2c4c;
}

@keyframes moveOnPath {
    to {
        offset-distance: 100%;
    }
}

/* Define the half-circle path */
.animate-follow-path {
    offset-path: path("M 20 150 A 130 130 0 0 1 280 150"); /* arc path */
    offset-rotate: 0deg; /* don’t rotate icons */
    offset-distance: 0%;
    animation: moveOnPath 12s linear infinite;
}

.jm_container {
    width: 96%;
    max-width: 1240px;
    margin: auto;
}
.logo_font {
    font-family: "Rubik Moonrocks", cursive;
}
.jm_nav {
    @apply block lg:flex justify-between lg:col-span-3 items-center absolute lg:static lg:w-auto top-0 left-0 overflow-hidden h-screen lg:h-auto duration-500 bg-[#fff] lg:bg-[transparent] lg:p-0 z-50;
}

.bg-hero {
    background: url("../assets/herobg.png") no-repeat center center/cover;
}

.gradient_text {
    background: linear-gradient(
        123deg,
        #1c99fe 20.69%,
        #7644ff 50.19%,
        #fd4766 79.69%
    );
    background-clip: text;
    -webkit-background-clip: text;
    color: transparent;
    -webkit-text-fill-color: transparent;
}
.freme {
    clip-path: polygon(25% 0%, 75% 0%, 100% 50%, 75% 100%, 25% 100%, 0% 50%);
}
.box_shadow {
    box-shadow: 50px 50px 50px 50px #1c99fe;
}
.card_shadow:hover {
    box-shadow: 0 0px 40px hsla(270, 100%, 70%, 0.4)
}
.heading_font {
    font-family: "Belanosima", sans-serif;
}
.jm_special_font {
    font-family: "Noto Serif", serif;
}
/* .dics_effects {
    box-shadow: -4px -4px 10px rgba(255, 255, 255, 1),
        inset -4px -4px 10px rgba(255, 255, 255, 1),
        4px 4px 10px rgba(0, 0, 0, 0.1), inset 4px 4px 10px rgba(0, 0, 0, 0.1);
} */
.dics_effects {
    box-shadow: -4px -4px 10px rgba(5, 8, 22, 1),
        inset -4px -4px 10px rgba(5, 8, 22, 1),
        4px 4px 10px rgba(255, 255, 255, 0.4),
        inset 4px 4px 10px rgba(255, 255, 255, 0.4);
}
.border_gradient {
    border-image: linear-gradient(to left, red, blue) 1;
}
.bg_gradient {
    background: linear-gradient(
        -30deg,
        #1c99fe 20.69%,
        #7644ff 50.19%,
        #fd4766 79.69%
    );
}
.jm_child {
    transition: all 5s ease-in-out;
}
.jm_parent:hover .jm_child {
    transform: translateY(calc(-100% + 312px));
}
.jm_parent .overly {
    transition: all linear 0.5s;
}
.jm_parent:hover .overly {
    bottom: 0;
    transition: all linear 0.5s;
}
.ant-tabs .ant-tabs-tab {
    color: #fff !important;
    font-size: 16px !important;
    font-weight: 700 !important;
}
.button_primary {
    @apply px-7 py-3 bg-gradient-to-r to-[#1C99FE] via-[#7644FF] from-[#FD4766]  text-white rounded-md cursor-pointer;
}
.button{
    @apply text-center px-5 py-3  text-white rounded-md cursor-pointer;
}
.resume-modal {
    width: 80% !important;
}
.mySwiper .swiper-slide {
    width: 25%;
    height: 100%;
    opacity: 0.3;
}
.mySwiper .swiper-slide-thumb-active {
    opacity: 1;
}
@media screen and (max-width: 540px) {
    .resume-modal {
        width: 95% !important;
    }
}

